# harness-factory

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  demo.tape  pyproject.toml
.github/workflows/: ci.yaml  publish-pypi.yaml
docs/: agent-use.md  human-in-the-loop.md  launch-playbook.md  release-publication.md  zenodo-publication-receipt.json  zenodo-publication.md
goldens/content_moderation/: cases.jsonl
goldens/expense_approval/: cases.jsonl
goldens/glp1_review/: README.md  cases.jsonl  generate.py
goldens/lead_scoring/: cases.jsonl
goldens/refund_review/: cases.jsonl
hsf/: __init__.py  badge.py  cli.py  demo.py  scaffold.py  serve.py
hsf/context/: __init__.py  assembler.py  lsp_resolver.py
hsf/examples/: __init__.py
hsf/foundry/: __init__.py  compiler.py  llm_client.py  regeneration.py
hsf/gates/: __init__.py  base.py  g1_security.py  g2_syntax.py  g3_execution.py  g4_accuracy.py  pipeline.py
hsf/registry/: __init__.py  artifacts.py
hsf/runtime/: __init__.py  audit.py  extractor.py  orchestrator.py  sandwich.py  state.py
hsf/spec/: __init__.py  loader.py  models.py
hsf/telemetry/: metrics.py  (+1 more)
scripts/: publish_zenodo.py
specs/: content_moderation.yaml  expense_approval.yaml  glp1_review.yaml  lead_scoring.yaml  refund_review.yaml
tests/: conftest.py  test_context.py  test_foundry.py  test_gallery.py  test_gates.py  test_generality.py  test_ltap_receipt.py  test_regen.py  test_registry.py  test_runtime.py  test_spec_loader.py  test_telemetry.py  test_v02_features.py
(+18 files in other folders)
